[tool.poetry]
name = "automate-yt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "automate_yt"}]

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
